crates/biome_cli/tests/snapshots/main_commands_check/check_js_plugin_with_native_field_names.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check file.js
```

## `biome.json`

```json
{
  "plugins": ["noConditionalAlternate.grit"],
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
condition ? consequent : alternate;
```

## `noConditionalAlternate.grit`

```grit
language js

JsConditionalExpression(consequent = $cons, alternate = $alt) where {
    register_diagnostic(span = $alt, message = "Avoid the alternate branch.", severity = "error")
}

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:26 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Avoid the alternate branch.
  
  > 1 │ condition ? consequent : alternate;
      │                          ^^^^^^^^^
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
