crates/biome_cli/tests/snapshots/main_commands_check/check_json_plugin.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check package.json
```

## `biome.json`

```json
{
  "plugins": ["noTestName.grit"],
  "formatter": {
    "enabled": false
  }
}
```

## `noTestName.grit`

```grit
language json

`"test"` as $val where {
    register_diagnostic(span = $val, message = "Avoid using 'test' as package name.", severity = "error")
}

```

## `package.json`

```json
{
    "name": "test",
    "version": "1.0.0"
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
package.json:2:13 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Avoid using 'test' as package name.
  
    1 │ {
  > 2 │     "name": "test",
      │             ^^^^^^
    3 │     "version": "1.0.0"
    4 │ }
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
