crates/biome_cli/tests/snapshots/main_commands_check/check_plugin_apply_rewrite_css.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe file.css
```

## `biome.json`

```json
{
  "plugins": ["banRed.grit"],
  "css": { "linter": { "enabled": true } },
  "linter": {
    "rules": { "recommended": false }
  },
  "formatter": { "enabled": false }
}
```

## `banRed.grit`

```grit
language css

`red` as $color where {
    register_diagnostic(
        span = $color,
        message = "Avoid using red.",
        severity = "warn"
    ),
    $color => `blue`
}

```

## `file.css`

```css
a {
  color: blue;
}
```

# Emitted Messages

```block
biome.json:4:15 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    2 │     "plugins": ["banRed.grit"],
    3 │     "css": { "linter": { "enabled": true } },
  > 4 │     "linter": {
      │               ^
  > 5 │         "rules": { "recommended": false }
  > 6 │     },
      │     ^
    7 │     "formatter": { "enabled": false }
    8 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
