crates/biome_cli/tests/snapshots/main_commands_check/check_plugin_apply_rewrite_json.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --unsafe package.json
```

## `biome.json`

```json
{
  "plugins": ["fixVersion.grit"],
  "json": { "linter": { "enabled": true } },
  "linter": {
    "rules": { "recommended": false }
  },
  "formatter": { "enabled": false }
}
```

## `fixVersion.grit`

```grit
language json

`"1.0.0"` as $version where {
    register_diagnostic(
        span = $version,
        message = "Update version.",
        severity = "warn"
    ),
    $version => `"2.0.0"`
}

```

## `package.json`

```json
{"version": "2.0.0"}

```

# Emitted Messages

```block
biome.json:4:15 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
    2 │     "plugins": ["fixVersion.grit"],
    3 │     "json": { "linter": { "enabled": true } },
  > 4 │     "linter": {
      │               ^
  > 5 │         "rules": { "recommended": false }
  > 6 │     },
      │     ^
    7 │     "formatter": { "enabled": false }
    8 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
