crates/biome_cli/tests/snapshots/main_commands_check/check_plugin_diagnostic_offset_in_vue_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.vue
```

## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["**/*.vue"],
      "plugins": ["noFoo.grit"]
    }
  ]
}
```

## `file.vue`

```vue
<template>
<p>line 1</p>
<p>line 2</p>
<p>line 3</p>
<p>line 4</p>
<p>line 5</p>
<p>line 6</p>
<p>line 7</p>
<p>line 8</p>
<p>line 9</p>
<p>line 10</p>
</template>

<script setup lang="ts">
const foo = 'bad'
</script>

```

## `noFoo.grit`

```grit
language js;

JsIdentifierBinding() as $name where {
    $name <: r"^foo$",
    register_diagnostic(
        span = $name,
        message = "Avoid using 'foo' as a variable name.",
        severity = "error"
    )
}

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue:15:7 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable foo is unused.
  
    14 │ <script setup lang="ts">
  > 15 │ const foo = 'bad'
       │       ^^^
    16 │ </script>
    17 │ 
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend foo with an underscore.
  
    1   │ - const·foo·=·'bad'
      1 │ + const·_foo·=·'bad'
    2 2 │   
  

```

```block
file.vue:15:7 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Avoid using 'foo' as a variable name.
  
    14 │ <script setup lang="ts">
  > 15 │ const foo = 'bad'
       │       ^^^
    16 │ </script>
    17 │ 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
