crates/biome_cli/tests/snapshots/main_commands_check/check_plugin_from_package_manifest.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check file.js
```

## `biome.json`

```json
{
  "plugins": ["@scope/biome-plugin/noAssign"],
  "formatter": { "enabled": false }
}
```

## `file.js`

```js
Object.assign({});
```

## `node_modules/@scope/biome-plugin/biome-manifest.json`

```json
{
    "version": 1,
    "plugins": {
        "rules": [{ "noAssign": "rules/noAssign.grit" }],
        "presets": { "recommended": ["noAssign"] }
    }
}
```

## `node_modules/@scope/biome-plugin/package.json`

```json
{
    "name": "@scope/biome-plugin",
    "exports": "./index.js"
}
```

## `node_modules/@scope/biome-plugin/rules/noAssign.grit`

```grit
`Object.assign($args)` where {
    register_diagnostic(
        span = $args,
        message = "Prefer object spread instead of `Object.assign()`"
    )
}
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:15 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Prefer object spread instead of `Object.assign()`
  
  > 1 │ Object.assign({});
      │               ^^
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
