crates/biome_cli/tests/snapshots/main_commands_check/check_plugin_invalid_fix_kind.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check input.js
```

## `biome.json`

```json
{
  "plugins": ["badFixKind.grit"],
  "formatter": { "enabled": false }
}
```

## `badFixKind.grit`

```grit
language js

`console.log($msg)` as $call where {
    register_diagnostic(span = $call, message = "Use console.info instead.", fix_kind = "invalid"),
    $call => `console.info($msg)`
}

```

## `input.js`

```js
console.log("hello");

```

# Emitted Messages

```block
input.js plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i badFixKind errored: invalid fix_kind "invalid", expected "safe" or "unsafe"
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 info.
```
