crates/biome_cli/tests/snapshots/main_commands_check/check_plugin_invalid_severity.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check input.js
```

## `biome.json`

```json
{
  "plugins": ["badSeverity.grit"],
  "formatter": { "enabled": false }
}
```

## `badSeverity.grit`

```grit
language js

`console.log($msg)` as $call where {
    register_diagnostic(span = $call, message = "Use console.info instead.", severity = "invalid")
}

```

## `input.js`

```js
console.log("hello");

```

# Emitted Messages

```block
input.js plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i badSeverity errored: invalid severity "invalid", expected "hint", "info", "warn", or "error"
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 info.
```
